Ensure long canned messages don't over stretch the width

--- a/src/messenger/webim/styles/simplicity/chat.css
+++ b/src/messenger/webim/styles/simplicity/chat.css
@@ -183,6 +183,7 @@ textarea.field {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 11px;
 	color: #666666;
+	width: 100%;
 }
 
 .button A {
